Fixing overlapping display bug

--- a/theme.css
+++ b/theme.css
@@ -243,7 +243,7 @@ polygon.center {
 }
 
 .content {
-    display: block;
+    display: none;
     height: 66%;
     object-fit: contain;
     contain: strict;
